--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,10 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
+  host: localhost
   pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
 
 development:
   <<: *default
