--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,8 @@ default: &default
   adapter: postgresql
   encoding: utf8
   host: localhost
+  #username: postgres
+  #password: postgres
   pool: 5
 
 development:
